--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="course3-0.0.1-SNAPSHOT">
+        
+    <wb-module deploy-name="servletproject-0.0.1-SNAPSHOT">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="course3"/>
-        <property name="java-output-path" value="/course3/build/classes"/>
+                
+        <property name="context-root" value="servletproject"/>
+                
+        <property name="java-output-path" value="/servletproject/build/classes"/>
+            
     </wb-module>
+    
 </project-modules>
